# clip-editor

./: .gitignore  ClipEditor.bat  README.md  app.js  manifest.json  pyproject.toml  style.css  sw.js  talls.html
docs/superpowers/plans/: 2026-07-17-clip-editor.md
docs/superpowers/specs/: 2026-07-17-clip-editor-design.md
pwa/: app.js  engine.js  index.html  style.css  sw.js  talls.html  talls.js
src/clip_editor/: __init__.py  app.py  assemble.py  jobs.py  media.py  models.py
static/: app.js  index.html  style.css  talls.html  talls.js
tests/: conftest.py  e2e_pwa_smoke.py  e2e_smoke.py  e2e_talls_smoke.py  test_api.py  test_assemble.py  test_jobs.py  test_media.py  test_models.py
