[project]
name = "clip-editor"
version = "0.1.0"
description = "Editor local de clips de mòbil: tallar, ordenar, unir amb música"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
